maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:24: error: type mismatch;
 found   : Unit
 required: Boolean
      if (!aMurNord(x,y+1)){
      ^ShortestPathMaze:23: error: type mismatch;
 found   : Unit
 required: Boolean
    if (y != getMondeHauteur()-1){
    ^